<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Torontourism</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="eventlabel">"Event : "</string>
    <string name="arealabel">"Area : "</string>
    <string name="categorylabel">"Category : "</string>
    <string name="locationlabel">"Location : "</string>
    <string name="admissionlabel">"Admission Price Range:</string>
    <string name="phonelabel">"Contact Number : "</string>
    <string name="eventURLlabel">"Event URL : "</string>
    <string name="mapURLlabel">"Map URL : "</string>
    <string name="startdatelabel">"Start Date : "</string>
    <string name="enddatelabel">"End Date : "</string>
    <string name="desclabel">"Description : "</string>
    <string name="image">Image</string>


</resources>
