<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/eventlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventlabel" />
    <TextView
        android:id="@+id/Event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventlabel"
        android:layout_above="@+id/arealabel"
        android:layout_toRightOf="@+id/categorylabel"
        android:layout_toEndOf="@+id/categorylabel" />
    <TextView
        android:id="@+id/arealabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventlabel"
        android:text="@string/arealabel"/>
    <TextView
        android:id="@+id/Area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arealabel"
        android:layout_above="@+id/categorylabel"
        android:layout_toRightOf="@+id/categorylabel"
        android:layout_toEndOf="@+id/categorylabel" />
    <TextView
        android:id="@+id/categorylabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/arealabel"
        android:text="@string/categorylabel"/>
    <TextView
        android:id="@+id/Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categorylabel"
        android:layout_below="@+id/Area"
        android:layout_toRightOf="@+id/categorylabel"
        android:layout_toEndOf="@+id/categorylabel" />

    <ImageView
        android:id="@+id/Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/categorylabel" />



</RelativeLayout>
