<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

    <TextView
        android:id="@+id/eventlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventlabel" />
    <TextView
        android:id="@+id/Event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventlabel"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/eventlabel"
        android:layout_alignRight="@+id/Event" />

    <TextView
        android:id="@+id/categorylabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Event"
        android:text="@string/categorylabel"/>
    <TextView
        android:id="@+id/Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categorylabel"
        android:layout_toEndOf="@+id/categorylabel"
        android:layout_below="@+id/Event"
        android:layout_toRightOf="@+id/categorylabel" />
    <TextView
        android:id="@+id/locationlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Category"
        android:text="@string/locationlabel"/>
    <TextView
        android:id="@id/Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationlabel"
        android:layout_toEndOf="@+id/locationlabel"
        android:layout_below="@+id/Category"
        android:layout_toRightOf="@+id/locationlabel"/>

    <ImageView
        android:id="@+id/Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/locationlabel"
        android:layout_toEndOf="@+id/Phone"
        android:layout_below="@+id/locationlabel" />


</RelativeLayout>
